# spinWannier

./: CITATION.cff  LICENSE  MANIFEST.in  README.md  setup.cfg
docs/: index.html
docs/source/: api.rst  classes.rst  conf.py  example.rst  index.rst  modules.rst  theory.rst
examples/: spinWannier_use_example.ipynb
examples/CrSTe/0_self-consistent/: CT2_sc.e2706382  CT2_sc.o2706382  EIGENVAL  IBZKPT  INCAR  KPOINTS  OSZICAR  OUTCAR  PCDAT  POSCAR  POTCAR  magnetic_moments.pickle  magnetic_moments.txt  magnetization_direction_is_correct.txt  vasp_launch  vasp_potz.py
examples/CrSTe/1_band_structure/: CONTCAR  CT2_sc.e2600790  CT2_sc.o2600790  CT2_sc.o2618370  EIGENVAL  FERMI_ENERGY_corrected.in  INCAR  KPOINTS  OSZICAR  XDATCAR  pyprocar.job  pyprocar.o2600791  pyprocar.o2618374  pyprocar_bands_projected_SOC.py  pyprocar_bands_projected_SOC_xyz.py  pyprocar_filter_S_xyz.py  vasp_launch  wannier90-bands_Sxyz.py
examples/CrSTe/1_non-self-consistent/: DOSCAR  EIGENVAL  FERMI_ENERGY_corrected.in  INCAR  OSZICAR  OUTCAR  PCDAT  vasp_launch
examples/CrSTe/2_wannier/: 2D_TB_model.o2699075  2D_TB_model.o2699445  FERMI_ENERGY.in  (+47 more)
examples/wannier_files_CrTe2/: FERMI_ENERGY.in  spinWannier_use_example.ipynb  spinWannier_use_example.py  wannier90.eig  wannier90.spn_formatted  wannier90.win  wannier90_u.mat  wannier90_u_dis.mat
src/spinWannier/: WannierTBmodel.py  plot_spin_texture_from_real_space_data.py  spin_texture_interpolated.py  vaspspn.py  wannier_quality_utils.py  wannier_utils.py
tests/: test_spinWannier.py
tests/test_files/: KPOINTS_parse_2  wannier90.win
(+19 files in other folders)
