[metadata]
name = spinWannier
version = 0.1.3
author = L. Vojacek
author_email = Libor.Vojacek@vutbr.cz
description = Wannier (spin) interpolation and spin texture plotting
long_description = file: LICENSE
license = BSD 3-Clause License

[options]
package_dir=
    =src
packages = 
    spinWannier
install_requires =
    numpy
    matplotlib
    scipy
    pandas
    pytest
    pytest-cov
    pytest-mpl
